EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==7/24/2009==
Derision: Moved RecalcWeight to after CalcAABonuses in bonuses.cpp because valgrind complained aabonuses.packrat was used uninitialised.
Derision: Fixed memory leak in /who all processing.
KLS: Added functionality to #path to faciliate making .path files in game, including a very CPU intensive #path process filename which will try to create a connected path from unconnected laid out nodes.
KLS: /find will now do a hazards check.

==7/22/2009==
realityincarnate: Added quest::factionvalue() command to give more logical faction values than the client uses (Scowling = 1, Ally = 9)

==07/21/2009==
Trevius: Added a 4th type for quest::getlevel(type) that will get the characters level2 value, which is the max level the character has ever reached.
Trevius: Added a 3rd option for saylink() to allow the link to be different than the say message. Ex quest::saylink("bind my soul", 0, "bind your soul")

==07/20/2009==
Trevius: Corrected/Updated some minor size stuff with illusions and player races.

==07/19/2009==
Trevius: EVENT_PROXIMITY_SAY will now work whether you have a target or not.
Trevius: Added bool option to quest::saylink() to allow them to be silent. Ex. quest::saylink("silent link",1)
Trevius: Added quest::FlyMode() command to allow setting flymode on players via quest scripts.
WildcardX: Fixed the build by casting this->GetTarget() as NPC in void Client::Handle_OP_ItemLinkClick method as a parameter to a EVENT_SAY call.
WildcardX: Added the changelog file to the solution for convenience.
realityincarnate: Spells cast from items now reduce the charges before creating spell effects (stops loregroup conflict with Gloves/Hammer of Infuse)

==07/15/2009==
Trevius: (Shendare) New object command (#object List|Add|Edit|Move|Rotate|Save|Copy|Delete|Undo) to manipulate objects in real-time from in-game in almost every possible way!

==07/14/2009==