@@ -7272,7 +7272,8 @@ void command_path(Client *c, const Seperator *sep)
 		c->Message(0, "#path add [requested_id]: Adds a node at your current location will try to take the requested id if possible.");
 		c->Message(0, "#path connect connect_to_id [is_teleport] [door_id]: Connects the currently targeted node to connect_to_id's node and connects that node back (requires shownode target).");
 		c->Message(0, "#path sconnect connect_to_id [is_teleport] [door_id]: Connects the currently targeted node to connect_to_id's node (requires shownode target).");		
-		c->Message(0, "#path disconnect disconnect_from_id: Disconnects the currently targeted node to disconnect from disconnect from id's node (requires shownode target).");
+		c->Message(0, "#path disconnect [all]/disconnect_from_id: Disconnects the currently targeted node to disconnect from disconnect from id's node (requires shownode target), if passed all as the second argument it will disconnect this node from every other node.");
+		c->Message(0, "#path move: Moves your targeted node to your current position");
 		c->Message(0, "#path process file_name: processes the map file and tries to automatically generate a rudimentary path setup and then dumps the current zone->pathing to a file of your naming.");
 		c->Message(0, "#path resort: resorts the connections after you've manually altered them so they'll work.");
 		return;
@@ -7400,7 +7401,23 @@ void command_path(Client *c, const Seperator *sep)
 	{
 		if(zone->pathing)
 		{
-			zone->pathing->DisconnectNodeToNode(c, atoi(sep->arg[2]));
+			if(!strcasecmp(sep->arg[2], "all"))
+			{
+				zone->pathing->DisconnectAll(c);
+			}
+			else
+			{
+				zone->pathing->DisconnectNodeToNode(c, atoi(sep->arg[2]));
+			}
+		}
+	}
+
+
+	if(!strcasecmp(sep->arg[1], "move"))
+	{
+		if(zone->pathing)
+		{
+			zone->pathing->MoveNode(c);
 		}
 	}
 
@@ -7423,6 +7440,25 @@ void command_path(Client *c, const Seperator *sep)
 		{
 			zone->pathing->ResortConnections();
 			c->Message(0, "Connections resorted...");
+		}
+	}
+
+	if(!strcasecmp(sep->arg[1], "hazard"))
+	{
+		if(zone->pathing)
+		{
+			if(c && c->GetTarget())
+			{
+				if(zone->pathing->NoHazardsAccurate(VERTEX(c->GetX(),c->GetY(),c->GetZ()), 
+					VERTEX(c->GetTarget()->GetX(),c->GetTarget()->GetY(),c->GetTarget()->GetZ())))
+				{
+					c->Message(0, "No hazards.");
+				}
+				else
+				{
+					c->Message(0, "Hazard Detected...");
+				}
+			}
 		}
 	}
 
